--- a/stripe_project/items/templates/items/item.html
+++ b/stripe_project/items/templates/items/item.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>{{ name }}</title>
-        <link rel="stylesheet" href="{% static 'css/style.css'%}" type="text/css">
+        <link rel="stylesheet" href="{% static 'css/items.css'%}" type="text/css">
         <script src="https://js.stripe.com/basil/stripe.js"></script>
     </head>
     <body>
