--- a/stripe_project/items/templates/stripe/cancel.html
+++ b/stripe_project/items/templates/stripe/cancel.html
@@ -1,10 +1,12 @@
+{% load static %}
 <!DOCTYPE html>
     <head>
         <meta charset="UTF-8">
         <title>Success</title>
+        <link rel="stylesheet" href="{% static 'css/stripe.css'%}" type="text/css">
     </head>
     <body>
-        <main>
+        <main class="main"> 
             <div class="content">
                 <h1 class="title">Отмена</h1>
             </div>
