--- a/stripe_project/items/static/css/index.css
+++ b/stripe_project/items/static/css/index.css
@@ -1,36 +1,50 @@
+:root {
+  --text-color: #366fff
+}
+
 * {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
 .main {
-    padding: 50px;
+  padding: 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 4rem;
 }
 
 .title {
-    margin-block-end: 2rem;
+  margin-block-end: 2rem;
 }
 
-.list-items {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    margin-inline-start: 1rem;
+.list-ordered {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-inline-start: 1rem;
 }
 
-.item {
-    color: #26aefc;
+.list-unordered {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  list-style: none;
 }
 
-.item:hover {
-   text-decoration: underline;
+.list-item {
+  color: var(--text-color);
 }
 
-.item-link {
-    text-decoration: none;
+.list-item:hover {
+  text-decoration: underline;
 }
 
-.item-link:visited {
-    color: #26aefc;
-    text-decoration: none;
+.link {
+  text-decoration: none;
+}
+
+.link:visited {
+  color: var(--text-color);
+  text-decoration: none;
 }
